<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="fr.lri.keller.td3b.SettingsActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/textSizeSettings" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:checkedButton="@+id/radioButtonLarge"
        android:id="@+id/radioGroupSize">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/small"
            android:id="@+id/radioButtonSmall"
            android:onClick="chooseTextSize"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medium"
            android:id="@+id/radioButtonMedium"
            android:onClick="chooseTextSize"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/large"
            android:id="@id/radioButtonLarge"
            android:onClick="chooseTextSize"/>
    </RadioGroup>
</LinearLayout>
